[package]
name = "AwsS3Mocker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1", features = ["full"] } # Async runtime
serde = { version = "1", features = ["derive"] } # Serialization
serde_json = "1.0"      # JSON handling
thiserror = "1.0"       # Error handling
async-trait = "0.1"     # Async trait for repositories
uuid = { version = "1", features = ["v4", "serde"] } # Unique identifiers
tracing = "0.1"         # Logging
tracing-subscriber = "0.3" # Logging utilities
